{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 38,
  "lineage": "f44aa4c0-868f-f131-82b4-735f504c464b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0ca2ed8a4b7f3e6ea",
            "id": "rtb-0ca2ed8a4b7f3e6ea",
            "owner_id": "520597344312",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af4f2ae8f9fac390",
            "arn": "arn:aws:ec2:ap-south-1:520597344312:instance/i-0c4c529105423e2dc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4c529105423e2dc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-079091ab1eddedc76",
            "private_dns": "ip-192-168-3-181.ap-south-1.compute.internal",
            "private_ip": "192.168.3.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0187800483c83a035",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023b4fe7e3753d72d",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db2032153584e174"
            ]
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-ff82f990",
            "arn": "arn:aws:ec2:ap-south-1:520597344312:instance/i-0e59854c3ba7f60df",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e59854c3ba7f60df",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050a61afd94de5ac5",
            "private_dns": "ip-192-168-2-51.ap-south-1.compute.internal",
            "private_ip": "192.168.2.51",
            "public_dns": "ec2-13-126-31-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.31.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002aa253fd07995a5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d05a81848e4e8fc9",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04299e8d3c5f0f406"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:internet-gateway/igw-0722951ed58c70938",
            "id": "igw-0722951ed58c70938",
            "owner_id": "520597344312",
            "tags": {
              "Name": "igwtask3"
            },
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03b6e7d3156f74450",
            "owner_id": "520597344312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0722951ed58c70938",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0981e57c5b3cc7ad5",
            "route_table_id": "rtb-0ca2ed8a4b7f3e6ea",
            "subnet_id": "subnet-023b4fe7e3753d72d"
          },
          "dependencies": [
            "aws_default_route_table.private_route",
            "aws_subnet.private_subnet",
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00885efdaf7ba13f7",
            "route_table_id": "rtb-03b6e7d3156f74450",
            "subnet_id": "subnet-0d05a81848e4e8fc9"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:security-group/sg-0db2032153584e174",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db2032153584e174",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql_sg",
            "name_prefix": null,
            "owner_id": "520597344312",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:security-group/sg-04299e8d3c5f0f406",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04299e8d3c5f0f406",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "wordpress",
            "name_prefix": null,
            "owner_id": "520597344312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:subnet/subnet-023b4fe7e3753d72d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-023b4fe7e3753d72d",
            "map_public_ip_on_launch": false,
            "owner_id": "520597344312",
            "tags": {
              "Name": "privatesubnet"
            },
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:subnet/subnet-0d05a81848e4e8fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0d05a81848e4e8fc9",
            "map_public_ip_on_launch": true,
            "owner_id": "520597344312",
            "tags": {
              "Name": "publicsubnet"
            },
            "vpc_id": "vpc-02ce783edc5646a2e"
          },
          "dependencies": [
            "aws_vpc.task3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:520597344312:vpc/vpc-02ce783edc5646a2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-012c759d2a89b7b18",
            "default_route_table_id": "rtb-0ca2ed8a4b7f3e6ea",
            "default_security_group_id": "sg-042eaec03d26428ec",
            "dhcp_options_id": "dopt-36fe035d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02ce783edc5646a2e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ca2ed8a4b7f3e6ea",
            "owner_id": "520597344312",
            "tags": {
              "Name": "task3"
            }
          }
        }
      ]
    }
  ]
}